--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+        <!-- A little help for the Netlify post-processing bots -->
+        <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+          <input type="text" name="username" />
+          <input type="email" name="email" />
+          <input type="text" name="productName" />
+          <textarea name="message"></textarea>
+        </form>
     <div id="root"></div>
     <!--
       This HTML file is a template.
