--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
         <form name="contact" netlify netlify-honeypot="bot-field" hidden>
           <input type="text" name="username" />
           <input type="email" name="email" />
-          <input type="text" name="productName" />
+          <input type="number" name="mobileno"/>
+          <input type="text" name="productname" />
           <textarea name="message"></textarea>
         </form>
     <div id="root"></div>
